<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dialog_background"
    tools:context=".song.add.SongAddDialogFragment">

  <TextView
    style="@style/DialogTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/add_song_title"
    />

  <Button
    android:id="@+id/button_download_song"
    style="@style/DialogButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:icon="@drawable/ic_download"
    android:text="@string/download_song_button"
    />

  <Button
    android:id="@+id/button_import_song"
    style="@style/DialogButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:icon="@drawable/ic_import"
    android:text="@string/import_song_button"
  />

  <Button
    android:id="@+id/button_create_song"
    style="@style/DialogButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:icon="@drawable/ic_add"
    android:text="@string/create_song_button"
    />

</androidx.appcompat.widget.LinearLayoutCompat>