<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.musicdoc.app.MusicDocActivity"
    >
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView"
        />
    <item
        android:id="@+id/app_bar_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/app_bar_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="101"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>