<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".song.edit.SongEditFragment">

  <ScrollView
    android:id="@+id/scrollview_edit_song"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <LinearLayout style="@style/FormBox">

        <TextView
          android:id="@+id/label_title"
          style="@style/FromLabel"
          android:text="@string/title" />

        <EditText
          android:id="@+id/edit_title"
          style="@style/FormEditText"
          android:hint="@string/title"
          android:inputType="text" />
      </LinearLayout>

      <LinearLayout style="@style/FormBox">

        <TextView
          android:id="@+id/label_artist"
          style="@style/FromLabel"
          android:text="@string/artist" />

        <EditText
          android:id="@+id/edit_artist"
          style="@style/FormEditText"
          android:hint="@string/artist"
          android:inputType="text" />
      </LinearLayout>

      <LinearLayout style="@style/FormBox">

        <TextView
          android:id="@+id/label_tags"
          style="@style/FromLabel"
          android:text="@string/tags" />

        <EditText
          android:id="@+id/edit_tags"
          style="@style/FormEditText"
          android:hint="@string/tags"
          android:editable="false"
          android:inputType="none" />
      </LinearLayout>

    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>